Fix always show scrollbars

--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -8,3 +8,8 @@
 @import 'scss/dashboard';
 @import 'scss/header';
 @import 'scss/administration';
+
+// Always show scroll bars
+html {
+    overflow-y: scroll;
+}
